disabled evaluation cycling

--- a/src/configs/pointnav_rgb_val.yaml
+++ b/src/configs/pointnav_rgb_val.yaml
@@ -2,6 +2,8 @@ ENVIRONMENT:
   MAX_EPISODE_STEPS: 500
   ITERATOR_OPTIONS:
     SHUFFLE: False
+    GROUP_BY_SCENE: True
+    CYCLE: False
 SIMULATOR:
   AGENT_0:
     SENSORS: ['RGB_SENSOR']
