--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,11 +56,12 @@ add_message_files(
 )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
+add_service_files(
+    FILES
+    EvalEpisode.srv
+    ResetAgent.srv
 #   Service2.srv
-# )
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
