--- a/src/configs/pointnav_rgbd_val.yaml
+++ b/src/configs/pointnav_rgbd_val.yaml
@@ -33,3 +33,6 @@ DATASET:
   TYPE: PointNav-v1
   SPLIT: val
   DATA_PATH: data/datasets/pointnav/habitat-test-scenes/v1/{split}/{split}.json.gz
+
+VIDEO_OPTION: ["disk"]
+VIDEO_DIR: "videos/test_habitat_evaluator/"
