replaced DISK's with disk's

--- a/configs/pointnav_rgbd_with_physics.yaml
+++ b/configs/pointnav_rgbd_with_physics.yaml
@@ -38,4 +38,4 @@ DATASET:
   SPLIT: val
   DATA_PATH: data/datasets/pointnav/habitat-test-scenes/v1/{split}/{split}.json.gz
 
-VIDEO_OPTION: ["DISK"]
+VIDEO_OPTION: ["disk"]
