--- a/configs/pointnav_rgbd_original.yaml
+++ b/configs/pointnav_rgbd_original.yaml
@@ -24,4 +24,4 @@ TASK:
   MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL']
   SUCCESS:
     SUCCESS_DISTANCE: 0.2
-VIDEO_OPTION: ["DISK"]
+VIDEO_OPTION: ["disk"]
