--- a/configs/pointnav_rgbd_with_physics.yaml
+++ b/configs/pointnav_rgbd_with_physics.yaml
@@ -6,10 +6,11 @@ ENVIRONMENT:
     CYCLE: False
 PHYSICS_SIMULATOR:
   TYPE: "Sim-Phys"
+  AGENTS: ['AGENT_0']
   AGENT_0:
     SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR']
-    ANGULAR_ACCELERATION: 12.56
-    ANGULAR_FRICTION: 1.0
+    ANGULAR_FRICTION: 0.0
+    LINEAR_FRICTION: 0.0
   HABITAT_SIM_V0:
     GPU_DEVICE_ID: 0
     ENABLE_PHYSICS: True
