--- a/configs/roam_configs/pointnav_rgbd_roam_mp3d_test_scenes.yaml
+++ b/configs/roam_configs/pointnav_rgbd_roam_mp3d_test_scenes.yaml
@@ -17,9 +17,11 @@ PHYSICS_SIMULATOR:
   RGB_SENSOR:
     WIDTH: 256
     HEIGHT: 256
+    POSITION: [0, 0.65, 0]
   DEPTH_SENSOR:
     WIDTH: 256
     HEIGHT: 256
+    POSITION: [0, 0.65, 0]
     NORMALIZE_DEPTH: False
 TASK:
   TYPE: Nav-Phys
