--- a/configs/setting_5_configs/pointnav_rgbd-mp3d_with_physics.yaml
+++ b/configs/setting_5_configs/pointnav_rgbd-mp3d_with_physics.yaml
@@ -4,6 +4,7 @@ ENVIRONMENT:
     SHUFFLE: False
     GROUP_BY_SCENE: True
     CYCLE: False
+
 PHYSICS_SIMULATOR:
   TYPE: "Sim-Phys"
   AGENTS: ['AGENT_0']
@@ -17,19 +18,21 @@ PHYSICS_SIMULATOR:
   RGB_SENSOR:
     WIDTH: 256
     HEIGHT: 256
+    POSITION: [0, 0.65, 0]
   DEPTH_SENSOR:
     WIDTH: 256
     HEIGHT: 256
+    POSITION: [0, 0.65, 0]
+    NORMALIZE_DEPTH: False
+
 TASK:
   TYPE: Nav-Phys
   SUCCESS_DISTANCE: 0.2
-
   SENSORS: ['POINTGOAL_WITH_GPS_COMPASS_SENSOR']
   POINTGOAL_WITH_GPS_COMPASS_SENSOR:
     GOAL_FORMAT: "POLAR"
     DIMENSIONALITY: 2
   GOAL_SENSOR_UUID: pointgoal_with_gps_compass
-
   MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL']
   SUCCESS:
     SUCCESS_DISTANCE: 0.2
@@ -38,3 +41,5 @@ DATASET:
   TYPE: PointNav-v1
   SPLIT: test
   DATA_PATH: data/datasets/pointnav/mp3d/v1/{split}/{split}.json.gz
+
+VIDEO_OPTION: ["disk"]
