updated package reqs + instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,33 @@
+# habitat-sim
+gitpython==3.1.20
+imageio==2.16.0
+imageio-ffmpeg==0.4.7
+matplotlib==3.3.4
+numba==0.53.1
+numpy==1.19.5
+numpy-quaternion==2022.4.2
+pillow==8.4.0
+scipy==1.5.4
+tqdm==4.64.0
+
+# habitat-lab
+gym==0.24.0
+yacs==0.1.8
+attrs==21.4.0
+opencv-python==4.5.5.64
+lmdb==1.3.0
+webdataset==0.1.40
+moviepy==1.0.3
+torch==1.10.2
+tensorflow==1.13.1
+tb-nightly==2.10.0a20220530
+ifcfg==0.22
+faster_fifo==1.4.2
+threadpoolctl==3.1.0
+Cython==0.29.30
+pkgconfig==1.5.5
+
+# ros-x-hab
 pandas==1.1.5
 seaborn==0.11.2
 rospkg==1.4.0
